tests/snapshots/compile__wgsl_source_maininput_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix3_amount: f32,
    u_opt_mix3_curve: i32,
    u_opt_mix3_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(2) var sampler_mirror_linear: sampler;
@group(0) @binding(3) var sampler_mirror_nearest: sampler;
@group(0) @binding(4) var sampler_repeat_linear: sampler;
@group(0) @binding(5) var sampler_repeat_nearest: sampler;
@group(0) @binding(6) var u_texture_maininput1_frame: texture_2d<f32>;
@group(0) @binding(7) var u_texture_maininput1_oscilloscope: texture_2d<f32>;

fn maininput1_frame(uv: vec2f) -> vec4f {
    let texSize = vec2f(textureDimensions(u_texture_maininput1_frame));
    let aspect = texSize.x / max(texSize.y, 1.0);
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, 1.0 - (uv.y + 1.0) * 0.5);
    return textureSampleLevel(u_texture_maininput1_frame, sampler_mirror_linear, t, 0.0);
}

fn maininput1_oscilloscope(uv: vec2f) -> vec4f {
    let wave = textureSampleLevel(u_texture_maininput1_oscilloscope, sampler_mirror_linear, vec2f((uv.x + 1.0) * 0.5, 0.5), 0.0).r;
    let line = (wave - 0.5) * 2.0 * 0.95;
    return select(vec4f(0.0), vec4f(1.0), abs(uv.y - line) < 0.02);
}

fn mix3_output(uv: vec2f) -> vec4f {
    let a = maininput1_frame(uv);
    let b = maininput1_oscilloscope(uv);
    let amt = clamp(u.u_control_mix3_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix3_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix3_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix3_output(uv);
}
