tests/snapshots/compile__wgsl_source_text_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix3_amount: f32,
    u_control_text1_backgroundColor: vec4f,
    u_control_text1_textColor: vec4f,
    u_opt_mix3_curve: i32,
    u_opt_mix3_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(2) var sampler_mirror_linear: sampler;
@group(0) @binding(3) var sampler_mirror_nearest: sampler;
@group(0) @binding(4) var sampler_repeat_linear: sampler;
@group(0) @binding(5) var sampler_repeat_nearest: sampler;
@group(0) @binding(6) var u_texture_text1_ink: texture_2d<f32>;

fn text1_ink(uv: vec2f) -> vec4f {
    let texSize = vec2f(textureDimensions(u_texture_text1_ink));
    let aspect = texSize.x / max(texSize.y, 1.0);
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, 1.0 - (uv.y + 1.0) * 0.5);
    return textureSampleLevel(u_texture_text1_ink, sampler_mirror_linear, t, 0.0);
}

fn text1_output(uv: vec2f) -> vec4f {
    let texSize = vec2f(textureDimensions(u_texture_text1_ink));
    let aspect = texSize.x / max(texSize.y, 1.0);
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, 1.0 - (uv.y + 1.0) * 0.5);
    let mask = textureSampleLevel(u_texture_text1_ink, sampler_mirror_linear, t, 0.0).r;
    return mix(u.u_control_text1_backgroundColor, u.u_control_text1_textColor, mask);
}

fn mix3_output(uv: vec2f) -> vec4f {
    let a = text1_ink(uv);
    let b = text1_output(uv);
    let amt = clamp(u.u_control_mix3_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix3_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix3_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix3_output(uv);
}
